Temporary fix for alignment options not disappearing after selecting option.

--- a/stylistics.css
+++ b/stylistics.css
@@ -190,6 +190,26 @@ dark_btns{
  
 }
 
+.theme_slot_wrapper{
+    text-align: left;
+    padding: 1rem 1rem 0rem 1rem;
+}
+
+.theme_slot_name{
+    grid-row: span 3;
+    grid-column: span 1;
+    /* text-align: left; */
+    font-size: 20px;
+}
+
+.theme_slot_option{
+        display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* text-align: left; */
+    border: 1px solid;
+    grid-gap: 1rem;
+}
+
 .resize_wrap{
     position: relative;
 }
